2009-11-21  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c: #include xgselect.h.
	(x_initialize): Call xgselect_initialize.

	* xsettings.c (something_changedCB): C++ comments => C comments.
	(init_gconf): Do not deal with any GLib file descriptors, xg_select
	does that now.

	* gtkutil.c (xg_timer, xg_process_timeouts, xg_start_timer)
	(xg_stop_timer, menu_grab_callback_cnt, menu_grab_callback)
	(scroll_bar_button_cb): Remove.
	(create_menus): C++ comments => C comments. Don't bind grab-notify
	event.
	(xg_create_scroll_bar): Don't bind button-press-event and
	button-release-event.

	* process.c: Include xgselect.h if defined (USE_GTK) ||
	defined (HAVE_GCONF).
	(wait_reading_process_output): Call xg_select for the same condition.

	* xgselect.c (xg_select): New function to better integrate with
	GLib/Gtk event handling.  Needed if GConf daemon dies/restarts.

	* xgselect.h: New file, declare xg_select, xgselect_initialize.

	* Makefile.in (XOBJ): Add xgselect.o.

2009-11-21  Andreas Schwab  <schwab@linux-m68k.org>

	* character.h (STRING_CHAR, STRING_CHAR_AND_LENGTH): Remove
	ignored second argument.  All callers changed.
	* regex.c (STRING_CHAR, STRING_CHAR_AND_LENGTH, RE_STRING_CHAR)
	(RE_STRING_CHAR_AND_LENGTH): Likewise.
	* xdisp.c (string_char_and_length): Likewise.

2009-11-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* xterm.c (x_new_font):
	* print.c (print_object):
	* cmds.c (Fself_insert_command): Move declarations before statements.

2009-11-20  Ken Brown  <kbrown@cornell.edu>  (tiny change)

	* s/cygwin.h: Remove unneeded linker flags.

2009-11-20  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (x_default_font_parameter): Call xsettings_get_system_font.

	* xsettings.h: Declare xsettings_get_system_font.

	* xsettings.c (xsettings_get_system_font): New function.
	(init_gconf): No use initiating gconf unless we have Xft also.
	(syms_of_xsettings): Only provide system-font-setting if HAVE_XFT and
	HAVE_GCONF.
